--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,4 +1,13 @@
 .titulo{
     text-align: center;
+    font-size: 20px;
+    font-weight: 900;
+    color: blue;
 }
 
+
+.img{
+    width: 500px;
+    display: block;
+    margin: 0 auto;
+}
