criação da pagina login e correção de código

--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,13 +1,18 @@
-.titulo{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 900;
-    color: blue;
+.caixa{
+    background-color: #3F51B5;
 }
 
+.titulo{
+   color: white !important;
+   font-weight: bold !important;
+}
 
-.img{
-    width: 500px;
-    display: block;
-    margin: 0 auto;
+.botao{
+    border-color: white !important;
+    background-color: #3F51B5;
+    color: white !important;
+}
+
+.postagens{
+    background-color: white;
 }
