implementação do redux para armazenar o tokin

--- a/src/components/estaticos/navBar/NavBar.css
+++ b/src/components/estaticos/navBar/NavBar.css
@@ -1,9 +1,8 @@
 .cursor{
     cursor: pointer;
+    color: white;
 }
 
-.Link-logar{
+.text-decorator-none{
     text-decoration: none;
-    color: white;
-    font-weight: normal;
 }
